# lexintel

./: .gitignore  README.md  pyproject.toml
backend/: pyproject.toml  test_pipeline.py
backend/document_pipeline/: __init__.py  api.py  pipeline.py
backend/document_pipeline/database/: __init__.py  postgres_client.py
backend/document_pipeline/extraction/: __init__.py  event_extractor.py  ner.py
backend/document_pipeline/ingestion/: __init__.py  dataset_loader.py  pdf_loader.py
backend/document_pipeline/models/: __init__.py  event_model.py
backend/document_pipeline/preprocessing/: __init__.py  ocr.py  section_splitter.py
backend/document_pipeline/prompts/: event_prompt.txt
backend/reasoning_engine/: __init__.py  api.py  contradiction_detector.py  event_graph.py  timeline_builder.py  weakness_analyzer.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware-manifest.json  middleware.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @supabase.js  @swc.js  clsx.js  (+4 more)
frontend/.next/types/: routes.d.ts  validator.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: LayoutShell.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  supabase.ts
(+98 files in other folders)
